# voidlight-markdown-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE_DESKTOP_SETUP.md  CONVERSATION_SUMMARY.md  DEVELOPMENT_LOG.md  Dockerfile  LICENSE  PROJECT_COMPLETION.md  README.md  TROUBLESHOOTING.md  WINDOWS_INSTALL_FIX.md  WINDOWS_SERVER_GUIDE.md  WINDOWS_SETUP.md  claude_desktop_config.json  docker-compose.yml  health_check.py  install_windows.cmd  install_windows.ps1  install_windows_improved.cmd  install_windows_improved.ps1  package-lock.json  package.json  pyproject.toml  requirements-basic.txt  requirements-dev.txt  requirements.txt  setup.py  test_local.js
.github/workflows/: docker.yml  release.yml  test.yml
01-환경설정/: README.md
02-markitdown-분석/: 01-코드분석보고서.md
03-기본-MCP-서버-구현/: 01-MCP-서버-기본구조.md
04-문서변환-엔진/: 01-변환기-아키텍처.md  02-파일-형식-지원.md  03-스트림-처리.md  04-플러그인-시스템.md
05-업그레이드-기능/: 01-한국어-지원.md
docs/: PROJECT_HISTORY.md  README.md
docs/backup/: claude_desktop_setup_backup.json  conversation_backup.txt  quick_reference.md  technical_notes.md
src/markitdown_mcp_enhanced/: __init__.py  cli.py  server.py
src/markitdown_mcp_enhanced/converters/: __init__.py  html_converter.py  text_converter.py
src/markitdown_mcp_enhanced/core/: __init__.py
src/markitdown_mcp_enhanced/plugins/: __init__.py
src/markitdown_mcp_enhanced/plugins/converters/: __init__.py
src/markitdown_mcp_enhanced/utils/: file_detector.py  stream_utils.py
src/voidlight_markitdown_mcp/: __init__.py  __main__.py  cli.py
src/voidlight_markitdown_mcp/config/: __init__.py  settings.py
src/voidlight_markitdown_mcp/converters/: audio_converter.py  docx_converter.py  image_converter.py  pdf_converter.py
src/voidlight_markitdown_mcp/core/: base_converter.py  exceptions.py  markitdown.py  stream_info.py
src/voidlight_markitdown_mcp/plugins/: plugin_manager.py
src/voidlight_markitdown_mcp/utils/: __init__.py  format_utils.py
